Agregar modelo usuarios

--- a/api/.env
+++ b/api/.env
@@ -3,7 +3,7 @@ NODE_ENV=development
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD="Cristina1805"
-DB_NAME="practica_no_guiada"
+DB_NAME="app_cursos"
 DB_PORT="3306"
 DB_DIALECT="mysql"
 NODE_DOCKER_PORT=8080
